# kargo-amazon-dsp-integration

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/: campaign.py  creative.py  errors.py  health.py  performance.py
app/core/: __init__.py  config.py  environment.py
app/database/: __init__.py  migrations.py
app/models/: campaign.py  creative.py  database.py
app/services/: amazon_client.py  bulk_generator.py  campaign_manager.py  creative_processor.py  kargo_client.py  viewability_service.py
app/tests/: conftest.py  test_amazon_client.py  test_creative_api.py  test_creative_processor.py  test_health.py  test_kargo_client.py  test_models.py
app/utils/: error_tracking.py  logging.py  metrics.py  performance.py  retry.py  validation.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docs/: API.md  DEPLOYMENT.md  INFRASTRUCTURE.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy.sh  docker-build.sh  manage-db.py  setup.py
tests/: test_api_campaign.py  test_bulk_generator.py  test_campaign_manager.py
